--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,17 +2,46 @@ name: Android
 
 on: [push, pull_request]
 
+env:
+  MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+  MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+
 jobs:
   build_and_test:
 
     runs-on: macOS-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-
-    - name: build and test
-      run: ./gradlew build test --continue --info
+      - uses: actions/checkout@v2
+      - name: Import GPG key
+        id: import_gpg
+        uses: crazy-max/ghaction-import-gpg@v4
+        with:
+          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
+          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+          server-id: ossrh
+          server-username: ${{ secrets.OSSRH_USERNAME }}
+          server-password: ${{ secrets.OSSRH_TOKEN }}
+          gpg-private-key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
+          gpg-passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+      - name: Restore gradle.properties
+        env:
+          GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID}}
+          GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
+          GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+        shell: bash
+        run: |
+          echo "signing.gnupg.keyId=$GPG_KEY_ID" >> ./gradle.properties
+          echo "signing.gnupg.password=$GPG_PASSPHRASE" >> ./gradle.properties
+          echo "signing.gnupg.secretKeyRingFile=$GPG_PRIVATE_KEY" >> ./gradle.properties
+      - name: Publish to Nexus repository
+        run: |
+          gradle publish
+        env:
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+          MAVEN_GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
