--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,13 +2,9 @@ name: Android
 
 on: [push, pull_request]
 
-env:
-  MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-  MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
-
 jobs:
   build_and_test:
-
+    environment: android
     runs-on: macOS-latest
 
     steps:
