--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,7 +13,7 @@ jobs:
         id: import_gpg
         uses: crazy-max/ghaction-import-gpg@v4
         with:
-          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
+          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
           passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
@@ -31,9 +31,9 @@ jobs:
           GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
         shell: bash
         run: |
-          echo "signing.gnupg.keyId=$GPG_KEY_ID" >> ./gradle.properties
-          echo "signing.gnupg.password=$GPG_PASSPHRASE" >> ./gradle.properties
-          echo "signing.gnupg.secretKeyRingFile=$GPG_PRIVATE_KEY" >> ./gradle.properties
+          echo "signing.gnupg.keyId=GPG_KEY_ID" >> ./gradle.properties
+          echo "signing.gnupg.password=GPG_PASSPHRASE" >> ./gradle.properties
+          echo "signing.gnupg.secretKeyRingFile=GPG_PRIVATE_KEY" >> ./gradle.properties
       - name: Publish to Nexus repository
         run: |
           gradle publish
