--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,10 +2,6 @@ name: Android
 
 on: [push, pull_request]
 
-env:
-  MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-  MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
-
 jobs:
   build_and_test:
     environment: android
@@ -39,8 +35,9 @@ jobs:
           echo "signing.gnupg.password=GPG_PASSPHRASE" >> ./gradle.properties
           echo "signing.gnupg.secretKeyRingFile=GPG_PRIVATE_KEY" >> ./gradle.properties
       - name: Publish to Nexus repository
-        run: |
-          gradle publish
+        uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
+        with:
+          arguments: publish
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
