--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
@@ -114,66 +113,65 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 artifacts {
     archives javadocJar, sourcesJar
 }
+
 signing {
     useGpgCmd()
     required { gradle.taskGraph.hasTask("uploadArchives") }
     sign configurations.archives
 }
 
-afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                version = '4.1.0'
-                group = 'com.nifcloud.mbaas'
-                artifacts {
-                    archives javadocJar, sourcesJar
+publishing {
+    publications {
+        release(MavenPublication) {
+            version = '4.1.0beta'
+            group = 'com.nifcloud.mbaas'
+            artifacts {
+                archives javadocJar, sourcesJar
+            }
+            pom {
+                signing {
+                    sign publishing.publications.release
+                    //sign configurations.archives
                 }
-                pom {
-                    signing {
-                        sign publishing.publications.release
-                        sign configurations.archives
-                    }
-                    name = 'ncmb_android'
-                    packaging = 'jar'
-                    // optionally artifactId can be defined here
-                    description = 'NIFCLOUD mobile backend Android SDK'
-                    url = 'https://mbaas.nifcloud.com/en/'
+                name = 'ncmb_android'
+                packaging = 'jar'
+                // optionally artifactId can be defined here
+                description = 'NIFCLOUD mobile backend Android SDK'
+                url = 'https://mbaas.nifcloud.com/en/'
 
-                    scm {
-                        connection = 'scm:git:https://github.com/NIFCLOUD-mbaas/ncmb_android.git'
-                        developerConnection = 'scm:git:https://github.com/NIFCLOUD-mbaas/ncmb_android.git'
-                        url = 'https://github.com/NIFCLOUD-mbaas/ncmb_android'
-                    }
+                scm {
+                    connection = 'scm:git:https://github.com/NIFCLOUD-mbaas/ncmb_android.git'
+                    developerConnection = 'scm:git:https://github.com/NIFCLOUD-mbaas/ncmb_android.git'
+                    url = 'https://github.com/NIFCLOUD-mbaas/ncmb_android'
+                }
 
-                    licenses {
-                        license {
-                            name = 'The Apache License, Version 2.0'
-                            url = 'https://github.com/NIFCLOUD-mbaas/ncmb_android/blob/master/LICENCE'
-                        }
+                licenses {
+                    license {
+                        name = 'The Apache License, Version 2.0'
+                        url = 'https://github.com/NIFCLOUD-mbaas/ncmb_android/blob/master/LICENCE'
                     }
+                }
 
-                    developers {
-                        developer {
-                            id = 'ncmbsdk'
-                            name = 'NCMB SDK Team'
-                        }
+                developers {
+                    developer {
+                        id = 'ncmbsdk'
+                        name = 'NCMB SDK Team'
                     }
                 }
             }
         }
-        repositories {
-            maven {
-                // beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-                // name = "OSSRH"
-                // def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
-                // def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
-                // url = project.hasProperty('release') ? releasesRepoUrl : snapshotsRepoUrl
-                url 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/'
-                credentials {
-                    username = System.getenv("MAVEN_USERNAME")
-                    password = System.getenv("MAVEN_PASSWORD")
-                }
+    }
+    repositories {
+        maven {
+            // beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+            name = "OSSRH"
+            // def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+            // def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
+            // url = project.hasProperty('release') ? releasesRepoUrl : snapshotsRepoUrl
+            url 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/'
+            credentials {
+                username = System.getenv("MAVEN_USERNAME")
+                password = System.getenv("MAVEN_PASSWORD")
             }
         }
     }
