--- a/build.gradle
+++ b/build.gradle
@@ -118,6 +118,7 @@ signing {
     useGpgCmd()
     required { gradle.taskGraph.hasTask("uploadArchives") }
     sign configurations.archives
+    //sign publishing.publications.release
 }
 
 publishing {
