--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,6 +33,7 @@ jobs:
           GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
         shell: bash
         run: |
+          echo "signing.keyId=$GPG_KEY_ID" >> ./gradle.properties
           echo "signing.gnupg.keyId=$GPG_KEY_ID" >> ./gradle.properties
           echo "signing.gnupg.password=$GPG_PASSPHRASE" >> ./gradle.properties
           echo "signing.gnupg.secretKeyRingFile=$GPG_PRIVATE_KEY" >> ./gradle.properties
