--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,18 +26,26 @@ jobs:
           server-password: ${{ secrets.OSSRH_TOKEN }}
           gpg-private-key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
           gpg-passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
-      - name: Restore gradle.properties
-        env:
+#      - name: Restore gradle.properties
+#        env:
+#          GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID}}
+#          GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
+#          GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+#        shell: bash
+#        run: |
+#          echo "signing.keyId=$GPG_KEY_ID" >> ./gradle.properties
+#          echo "signing.gnupg.keyId=$GPG_KEY_ID" >> ./gradle.properties
+#          echo "signing.gnupg.password=$GPG_PASSPHRASE" >> ./gradle.properties
+#          echo "signing.gnupg.secretKeyRingFile=$GPG_PRIVATE_KEY" >> ./gradle.properties
+#          cat ./gradle.properties
+      - name: Build task gradle sign
+        uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
+        with:
+          arguments: sign
+        env
           GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID}}
           GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
           GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
-        shell: bash
-        run: |
-          echo "signing.keyId=$GPG_KEY_ID" >> ./gradle.properties
-          echo "signing.gnupg.keyId=$GPG_KEY_ID" >> ./gradle.properties
-          echo "signing.gnupg.password=$GPG_PASSPHRASE" >> ./gradle.properties
-          echo "signing.gnupg.secretKeyRingFile=$GPG_PRIVATE_KEY" >> ./gradle.properties
-          cat ./gradle.properties
       - name: Publish to Nexus repository
         uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
         with:
