--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build task gradle sign
         uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
         with:
-          arguments: sign
+          arguments: signArchives
         env:
           GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID}}
           GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
