--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,24 +21,26 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-          server-id: ossrh
-          server-username: ${{ secrets.OSSRH_USERNAME }}
-          server-password: ${{ secrets.OSSRH_TOKEN }}
-          gpg-private-key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
-          gpg-passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
-      - name: Build task gradle sign
-        uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
-        with:
-          arguments: signArchives
-        env:
-          GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID}}
-          GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
-          GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+      - name: build and test Android SDK
+        run: ./gradlew build test --continuew --info
+#      - name: Build task gradle sign
+#        uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
+#        with:
+#          arguments: signArchives
+#        env:
       - name: Publish to Nexus repository
         uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
         with:
           arguments: publish
         env:
+          GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID}}
+          GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
+          GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
           MAVEN_GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+          server-id: ossrh
+          server-username: ${{ secrets.OSSRH_USERNAME }}
+          server-password: ${{ secrets.OSSRH_TOKEN }}
+          gpg-private-key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
+          gpg-passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
