--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,22 +1,22 @@
 name: Android
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   build_and_test:
     environment: android
-    runs-on: ubuntu-18.04
+    runs-on: macOS-latest
 
     steps:
       - uses: actions/checkout@v2
       - name: Install git-crypt
         run: sudo apt install -y git-crypt gnupg2
-      - name: Import GPG key
-        id: import_gpg
-        uses: crazy-max/ghaction-import-gpg@v4
-        with:
-          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
-          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+#      - name: Import GPG key
+#        id: import_gpg
+#        uses: crazy-max/ghaction-import-gpg@v4
+#        with:
+#          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
+#          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
