--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,8 +9,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Install git-crypt
-        run: sudo apt install -y git-crypt gnupg2
+#      - name: Install git-crypt
+#        run: sudo apt install -y git-crypt gnupg2
 #      - name: Import GPG key
 #        id: import_gpg
 #        uses: crazy-max/ghaction-import-gpg@v4
