--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-apply plugin: 'maven-publish'
+apply plugin: 'maven'
 apply plugin: 'signing'
 
 buildscript {
@@ -122,69 +122,53 @@ artifacts {
 }
 
 signing {
-    //useGpgCmd()
-    //required { gradle.taskGraph.hasTask("uploadArchives") }
-    def signingKeyId = System.getenv("GPG_KEY_ID")
-    def signingKey = System.getenv("GPG_PRIVATE_KEY")
-    def signingPassword = System.getenv("GPG_PASSPHRASE")
-    useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
+    useGpgCmd()
+    required { gradle.taskGraph.hasTask("uploadArchives") }
     sign configurations.archives
     //sign publishing.publications.release
 }
 
-publishing {
-    publications {
-        release(MavenPublication) {
-            version = '4.1.0beta'
-            group = 'com.nifcloud.mbaas'
-            artifacts {
-                archives javadocJar, sourcesJar
+uploadArchives{
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: System.getenv("MAVEN_USERNAME"), password: System.getenv("MAVEN_PASSWORD"))
             }
-            pom {
-                signing {
-                    sign publishing.publications.release
-                    //sign configurations.archives
-                }
-                name = 'ncmb_android'
-                packaging = 'jar'
+
+            snapshotRepository(url: "https://s01.oss.sonatype.org/content/repositories/snapshots/") {
+                authentication(userName: System.getenv("MAVEN_USERNAME"), password: System.getenv("MAVEN_PASSWORD"))
+            }
+
+            pom.project {
+                name 'ncmb_android'
+                packaging 'jar'
                 // optionally artifactId can be defined here
-                description = 'NIFCLOUD mobile backend Android SDK'
-                url = 'https://mbaas.nifcloud.com/en/'
+                description 'NIFCLOUD mobile backend Android SDK'
+                url 'https://github.com/NIFCLOUD-mbaas/ncmb_android#readme'
 
                 scm {
-                    connection = 'scm:git:https://github.com/NIFCLOUD-mbaas/ncmb_android.git'
-                    developerConnection = 'scm:git:https://github.com/NIFCLOUD-mbaas/ncmb_android.git'
-                    url = 'https://github.com/NIFCLOUD-mbaas/ncmb_android'
+                    connection 'scm:git:https://github.com/NIFCLOUD-mbaas/ncmb_android.git'
+                    developerConnection 'scm:git:https://github.com/NIFCLOUD-mbaas/ncmb_android.git'
+                    url 'https://github.com/NIFCLOUD-mbaas/ncmb_android'
                 }
 
                 licenses {
                     license {
-                        name = 'The Apache License, Version 2.0'
-                        url = 'https://github.com/NIFCLOUD-mbaas/ncmb_android/blob/master/LICENCE'
+                        name 'The Apache License, Version 2.0'
+                        url 'https://github.com/NIFCLOUD-mbaas/ncmb_android/blob/master/LICENCE'
                     }
                 }
 
                 developers {
                     developer {
-                        id = 'ncmbsdk'
-                        name = 'NCMB SDK Team'
+                        id 'ncmbsdk'
+                        name 'NCMB SDK Team'
                     }
                 }
             }
         }
     }
-    repositories {
-        maven {
-            // beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-            name = "OSSRH"
-            // def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
-            // def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
-            // url = project.hasProperty('release') ? releasesRepoUrl : snapshotsRepoUrl
-            url 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/'
-            credentials {
-                username = System.getenv("MAVEN_USERNAME")
-                password = System.getenv("MAVEN_PASSWORD")
-            }
-        }
-    }
 }
+
