--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,33 +5,44 @@ on: [push]
 jobs:
   build_and_test:
     environment: android
-    runs-on: macOS-latest
+    runs-on: ubuntu-18.04
 
     steps:
       - uses: actions/checkout@v2
-#      - name: Install git-crypt
-#        run: sudo apt install -y git-crypt gnupg2
-#      - name: Import GPG key
-#        id: import_gpg
-#        uses: crazy-max/ghaction-import-gpg@v4
-#        with:
-#          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
-#          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+      - name: Install git-crypt
+        run: sudo apt install -y git-crypt gnupg2
+      - name: Import GPG key
+        id: import_gpg
+        uses: crazy-max/ghaction-import-gpg@v4
+        with:
+          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
+          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
       - name: build and test Android SDK
         run: ./gradlew build test --continue --info
+
 #      - name: Build task gradle sign
 #        uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
 #        with:
 #          arguments: signArchives
 #        env:
+      - name: Add key file to gradle.properties
+        env:
+          GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID}}
+          GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
+          GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+        shell: bash
+        run:
+          echo "signing.keyId=$GPG_KEY_ID" >> ./gradle.properties
+          echo "signing.gnupg.keyId=$GPG_KEY_ID" >> ./gradle.properties
+          echo "signing.gnupg.password=$GPG_PASSPHRASE" >> ./gradle.properties
+          echo "signing.gnupg.secretKeyRingFile=$GPG_PRIVATE_KEY" >> ./gradle.properties
+          cat ./gradle.properties
       - name: Publish to Nexus repository
-        uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
-        with:
-          arguments: publish
+        run: ./gradlew uploadArchive
         env:
           GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID}}
           GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
