--- a/build.gradle
+++ b/build.gradle
@@ -90,85 +90,84 @@ task makeJar(type: Copy) {
 }
 makeJar.dependsOn(clearJar, build)
 
-ext.sharedManifest = manifest {
-    attributes(
-            "Implementation-Title": project.name,
-            "Implementation-Version": version,
-            "Implementation-Vendor": project.group,
-            "Bundle-Vendor": project.group
-    )
-}
-
-task sourcesJar(type: Jar) {
-    from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
-    manifest {
-        from sharedManifest
-    }
-}
-
-task javadoc(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-
-artifacts {
-    archives javadocJar, sourcesJar
-}
-
-signing {
-    useGpgCmd()
-    required { gradle.taskGraph.hasTask("uploadArchives") }
-    sign configurations.archives
-    //sign publishing.publications.release
-}
-
-uploadArchives{
-    repositories {
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-            repository(url: "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: System.getenv("MAVEN_USERNAME"), password: System.getenv("MAVEN_PASSWORD"))
-            }
-
-            snapshotRepository(url: "https://s01.oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: System.getenv("MAVEN_USERNAME"), password: System.getenv("MAVEN_PASSWORD"))
-            }
-
-            pom.project {
-                name 'ncmb_android'
-                packaging 'jar'
-                // optionally artifactId can be defined here
-                description 'NIFCLOUD mobile backend Android SDK'
-                url 'https://github.com/NIFCLOUD-mbaas/ncmb_android#readme'
-
-                scm {
-                    connection 'scm:git:https://github.com/NIFCLOUD-mbaas/ncmb_android.git'
-                    developerConnection 'scm:git:https://github.com/NIFCLOUD-mbaas/ncmb_android.git'
-                    url 'https://github.com/NIFCLOUD-mbaas/ncmb_android'
-                }
-
-                licenses {
-                    license {
-                        name 'The Apache License, Version 2.0'
-                        url 'https://github.com/NIFCLOUD-mbaas/ncmb_android/blob/master/LICENCE'
-                    }
-                }
-
-                developers {
-                    developer {
-                        id 'ncmbsdk'
-                        name 'NCMB SDK Team'
-                    }
-                }
-            }
-        }
-    }
-}
-
+//ext.sharedManifest = manifest {
+//    attributes(
+//            "Implementation-Title": project.name,
+//            "Implementation-Version": version,
+//            "Implementation-Vendor": project.group,
+//            "Bundle-Vendor": project.group
+//    )
+//}
+//
+//task sourcesJar(type: Jar) {
+//    from android.sourceSets.main.java.srcDirs
+//    classifier = 'sources'
+//    manifest {
+//        from sharedManifest
+//    }
+//}
+//
+//task javadoc(type: Javadoc) {
+//    source = android.sourceSets.main.java.srcDirs
+//    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+//}
+//
+//task javadocJar(type: Jar, dependsOn: javadoc) {
+//    classifier = 'javadoc'
+//    from javadoc.destinationDir
+//}
+//
+//artifacts {
+//    archives javadocJar, sourcesJar
+//}
+//
+//signing {
+//    useGpgCmd()
+//    required { gradle.taskGraph.hasTask("uploadArchives") }
+//    sign configurations.archives
+//}
+//
+//uploadArchives{
+//    repositories {
+//        mavenDeployer {
+//            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+//
+//            repository(url: "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/") {
+//                authentication(userName: System.getenv("MAVEN_USERNAME"), password: System.getenv("MAVEN_PASSWORD"))
+//            }
+//
+//            snapshotRepository(url: "https://s01.oss.sonatype.org/content/repositories/snapshots/") {
+//                authentication(userName: System.getenv("MAVEN_USERNAME"), password: System.getenv("MAVEN_PASSWORD"))
+//            }
+//
+//            pom.project {
+//                name 'ncmb_android'
+//                packaging 'jar'
+//                // optionally artifactId can be defined here
+//                description 'NIFCLOUD mobile backend Android SDK'
+//                url 'https://github.com/NIFCLOUD-mbaas/ncmb_android#readme'
+//
+//                scm {
+//                    connection 'scm:git:https://github.com/NIFCLOUD-mbaas/ncmb_android.git'
+//                    developerConnection 'scm:git:https://github.com/NIFCLOUD-mbaas/ncmb_android.git'
+//                    url 'https://github.com/NIFCLOUD-mbaas/ncmb_android'
+//                }
+//
+//                licenses {
+//                    license {
+//                        name 'The Apache License, Version 2.0'
+//                        url 'https://github.com/NIFCLOUD-mbaas/ncmb_android/blob/master/LICENCE'
+//                    }
+//                }
+//
+//                developers {
+//                    developer {
+//                        id 'ncmbsdk'
+//                        name 'NCMB SDK Team'
+//                    }
+//                }
+//            }
+//        }
+//    }
+//}
+//
