--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,14 +9,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-#      - name: Install git-crypt
-#        run: sudo apt install -y git-crypt gnupg2
-#      - name: Import GPG key
-#        id: import_gpg
-#        uses: crazy-max/ghaction-import-gpg@v4
-#        with:
-#          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
-#          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+      - name: Install git-crypt
+        run:
+            sudo apt-get install gnupg2 -y
+            gpg2 --list-keys
+      - name: Import GPG key
+        id: import_gpg
+        uses: crazy-max/ghaction-import-gpg@v4
+        with:
+          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
+          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+      - name: Check key
+        shell: bash
+        run:
+           gpg2 --list-keys
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
