--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,16 +13,18 @@ jobs:
         run: |
             sudo apt-get install gnupg2 -y
             gpg2 --list-keys
-      - name: Import GPG key
-        id: import_gpg
-        uses: crazy-max/ghaction-import-gpg@v4
-        with:
-          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
-          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
-      - name: Check key
-        shell: bash
-        run:
-           gpg2 --list-keys
+      - name: Import private GPG key from variable SIGNING_GNUPG_SECRETKEY
+        run: echo "${{ secrets.SIGNING_GNUPG_SECRETKEY }}" | gpg2 --import
+      - name: List all GPG keys
+        run: |
+          gpg2 --list-keys
+          gpg2 --list-secret-keys
+#      - name: Import GPG key
+#        id: import_gpg
+#        uses: crazy-max/ghaction-import-gpg@v4
+#        with:
+#          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
+#          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
