--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,22 +15,22 @@ jobs:
           java-version: 1.8
       - name: Install git-crypt
         run: |
-            sudo apt-get install gnupg
-            gpg --list-keys
+            sudo apt-get install gnupg2
+            gpg2 --list-keys
       - name: Import private GPG key from variable SIGNING_GNUPG_SECRETKEY
         run: |
-            gpg --keyserver keyserver.ubuntu.com --recv-keys AD6B952EA698E37BF3E6E0142E34F971E62E12E5
+            gpg2 --keyserver keyserver.ubuntu.com --recv-keys AD6B952EA698E37BF3E6E0142E34F971E62E12E5
 
-      - name: Import GPG key
-        id: import_gpg
-        uses: crazy-max/ghaction-import-gpg@v4
-        with:
-          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
-          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+#      - name: Import GPG key
+#        id: import_gpg
+#        uses: crazy-max/ghaction-import-gpg@v4
+#        with:
+#          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
+#          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
       - name: List all GPG keys
         run: |
-          gpg --list-keys
-          gpg --list-secret-keys
+          gpg2 --list-keys
+          gpg2 --list-secret-keys
       - name: Add key file to gradle.properties
         env:
           GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID}}
