--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,15 +22,15 @@ jobs:
             gpg2 --keyserver keyserver.ubuntu.com --recv-keys AD6B952EA698E37BF3E6E0142E34F971E62E12E5
             gpg2 --list-keys
 
-#      - name: Import GPG key
-#        id: import_gpg
-#        uses: crazy-max/ghaction-import-gpg@v4
-#        with:
-#          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
-#          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+      - name: Import GPG key
+        id: import_gpg
+        uses: crazy-max/ghaction-import-gpg@v4
+        with:
+          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
+          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
 
-      - name: Import private GPG key from variable GITHUB_SECRETS_PRIVATE_GPG_KEY
-        run: echo "${{ secrets.SIGNING_GNUPG_SECRETKEY }}" | gpg2 --import
+#      - name: Import private GPG key from variable GITHUB_SECRETS_PRIVATE_GPG_KEY
+#        run: echo "${{ secrets.SIGNING_GNUPG_SECRETKEY }}" | gpg2 --import
 
       - name: List all GPG keys
         run: |
