--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build_and_test:
     environment: android
-    runs-on: ubuntu-18.04
+    runs-on: macOS-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -15,26 +15,27 @@ jobs:
           java-version: 1.8
       - name: Install git-crypt
         run: |
-            sudo apt-get install gnupg2
-            gpg2 --list-keys
-      - name: Import public GPG key
-        run: |
-            gpg2 --keyserver keyserver.ubuntu.com --recv-keys AD6B952EA698E37BF3E6E0142E34F971E62E12E5
-            gpg2 --list-keys
+            brew install gnupg
+            gpg --list-keys
 
-      - name: Import GPG key
-        id: import_gpg
-        uses: crazy-max/ghaction-import-gpg@v4
-        with:
-          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
-          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+#      - name: Import public GPG key
+#        run: |
+#            gpg --keyserver keyserver.ubuntu.com --recv-keys AD6B952EA698E37BF3E6E0142E34F971E62E12E5
+#            gpg --list-keys
+#
+#      - name: Import GPG key
+#        id: import_gpg
+#        uses: crazy-max/ghaction-import-gpg@v4
+#        with:
+#          gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
+#          passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
 
 #      - name: Import private GPG key from variable GITHUB_SECRETS_PRIVATE_GPG_KEY
 #        run: echo "${{ secrets.SIGNING_GNUPG_SECRETKEY }}" | gpg2 --import
 
-      - name: List all GPG keys
+      - name: List all GPG secret keys
         run: |
-          gpg2 --list-secret-keys
+          gpg --list-secret-keys
 
 #      - name: Add key file to gradle.properties
 #        env:
